improving python code (using class)

--- a/python/toy_example.ipynb
+++ b/python/toy_example.ipynb
@@ -10,36 +10,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "execution": {
-     "iopub.status.idle": "2020-08-28T17:30:02.771426Z",
-     "shell.execute_reply": "2020-08-28T17:30:02.770830Z",
-     "shell.execute_reply.started": "2020-08-28T17:30:01.926909Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from equilibrator_api import Q_, R, default_T\n",
-    "from model_balancing import _ln_kcatr, _ln_conc_enz, _driving_forces, solve\n",
+    "from model_balancing import ModelBalancing, Q_\n",
     "import cvxpy as cp"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2020-08-28T17:30:02.772558Z",
-     "iopub.status.busy": "2020-08-28T17:30:02.772355Z",
-     "iopub.status.idle": "2020-08-28T17:30:02.777636Z",
-     "shell.execute_reply": "2020-08-28T17:30:02.777146Z",
-     "shell.execute_reply.started": "2020-08-28T17:30:02.772536Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "use_regulation = False\n",
+    "use_regulation = True\n",
     "args = {}\n",
     "\n",
     "# choose solver\n",
@@ -54,15 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2020-08-28T17:30:02.778856Z",
-     "iopub.status.busy": "2020-08-28T17:30:02.778583Z",
-     "iopub.status.idle": "2020-08-28T17:30:02.786433Z",
-     "shell.execute_reply": "2020-08-28T17:30:02.785566Z",
-     "shell.execute_reply.started": "2020-08-28T17:30:02.778833Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Network topology\n",
@@ -78,7 +55,7 @@
     "if use_regulation:\n",
     "    args[\"A_act\"] = np.matrix(\n",
     "        [\n",
-    "            [0, 1, 2],\n",
+    "            [0, 1, 1],\n",
     "            [0, 0, 0],\n",
     "            [0, 0, 0]\n",
     "        ], dtype=float\n",
@@ -87,7 +64,7 @@
     "        [\n",
     "            [0, 0, 0],\n",
     "            [0, 0, 0],\n",
-    "            [2, 0, 0]\n",
+    "            [1, 0, 0]\n",
     "        ], dtype=float\n",
     "    )\n",
     "else:\n",
@@ -110,20 +87,12 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2020-08-28T17:30:02.787873Z",
-     "iopub.status.busy": "2020-08-28T17:30:02.787616Z",
-     "iopub.status.idle": "2020-08-28T17:30:02.802596Z",
-     "shell.execute_reply": "2020-08-28T17:30:02.802034Z",
-     "shell.execute_reply.started": "2020-08-28T17:30:02.787855Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Priors for Kinetic and Thermodynamic parameters\n",
     "\n",
-    "args[\"Keq_gmean\"] = Q_([57, 0.13, 3200], \"\")  # geometric mean (assuming a standard concentration of 1M)\n",
+    "args[\"Keq_gmean\"] = Q_([1, 1, 1], \"\")  # geometric mean (assuming a standard concentration of 1M)\n",
     "args[\"Keq_ln_cov\"] = np.array(\n",
     "    [\n",
     "        [1, 0, 0],\n",
@@ -164,7 +133,7 @@
     "    ]\n",
     ") # log-scale covariance\n",
     "\n",
-    "args[\"Ka_gmean\"] = Q_([1, 1], \"M\")\n",
+    "args[\"Ka_gmean\"] = Q_([1e-3, 5e-3], \"M\")\n",
     "args[\"Ka_ln_cov\"] = np.array(\n",
     "    [\n",
     "        [1, 0],\n",
@@ -172,7 +141,7 @@
     "    ]\n",
     ")\n",
     "\n",
-    "args[\"Ki_gmean\"] = Q_([1], \"M\")\n",
+    "args[\"Ki_gmean\"] = Q_([1e-3], \"M\")\n",
     "args[\"Ki_ln_cov\"] = np.array(\n",
     "    [\n",
     "        [1],\n",
@@ -183,15 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2020-08-28T17:30:02.803787Z",
-     "iopub.status.busy": "2020-08-28T17:30:02.803512Z",
-     "iopub.status.idle": "2020-08-28T17:30:02.810861Z",
-     "shell.execute_reply": "2020-08-28T17:30:02.810217Z",
-     "shell.execute_reply.started": "2020-08-28T17:30:02.803766Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# condition dependent data (columns represent conditions)\n",
@@ -221,9 +182,9 @@
     "\n",
     "args[\"conc_met_gmean\"] = Q_(\n",
     "    [\n",
-    "        [2e-3, 1e-2, 2e-3, 1e-3],\n",
-    "        [2e-4, 1e-4, 3e-4, 1e-4],\n",
-    "        [1e-5, 1e-5, 1e-5, 1e-5],\n",
+    "        [3e-3, 4e-3, 9e-4, 3e-4],\n",
+    "        [2e-3, 3e-3, 6e-4, 2e-4],\n",
+    "        [1e-3, 2e-3, 3e-4, 1e-4],\n",
     "    ], \"M\"\n",
     ")  # geometric mean\n",
     "\n",
@@ -239,138 +200,92 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2020-08-28T17:30:02.812052Z",
-     "iopub.status.busy": "2020-08-28T17:30:02.811858Z",
-     "iopub.status.idle": "2020-08-28T17:30:02.818642Z",
-     "shell.execute_reply": "2020-08-28T17:30:02.818128Z",
-     "shell.execute_reply.started": "2020-08-28T17:30:02.812034Z"
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "initial total squared Z-scores = 0.000\n",
+      "optimized total squared Z-scores = 0.629\n",
+      "------------------------- All Z-scores -------------------------\n",
+      "enzymes =  0.0\n",
+      "metabolites =  0.01\n",
+      "Keq =  0.23\n",
+      "kcat forward =  0.16\n",
+      "kcat reverse =  0.01\n",
+      "Km =  0.05\n",
+      "Ka =  0.14\n",
+      "Ki =  0.03\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
-    "fluxes, S, A_act, A_inh = args[\"fluxes\"], args[\"S\"], args[\"A_act\"], args[\"A_inh\"]\n",
-    "ln_Keq = np.log(args[\"Keq_gmean\"].m_as(\"\"))\n",
-    "ln_kcatf = np.log(args[\"kcatf_gmean\"].m_as(\"1/s\"))\n",
-    "ln_Km = np.log(args[\"Km_gmean\"].m_as(\"M\"))\n",
-    "ln_Ka = np.log(args[\"Ka_gmean\"].m_as(\"M\"))\n",
-    "ln_Ki = np.log(args[\"Ki_gmean\"].m_as(\"M\"))\n",
-    "ln_conc_met = np.log(args[\"conc_met_gmean\"].m_as(\"M\"))\n",
+    "args[\"rate_law\"] = \"CM\"\n",
     "\n",
-    "args[\"kcatr_gmean\"] = np.exp(_ln_kcatr(ln_kcatf, ln_Km, ln_Keq, S).value) * Q_(\"1/s\")"
+    "mb = ModelBalancing(**args)\n",
+    "\n",
+    "# check that the driving forces at the mode are all positive\n",
+    "assert mb.is_gmean_feasible()\n",
+    "\n",
+    "mb.initialize_with_gmeans()\n",
+    "print(f\"initial total squared Z-scores = {mb.objective_value:.3f}\")\n",
+    "\n",
+    "mb.solve()\n",
+    "print(f\"optimized total squared Z-scores = {mb.objective_value:.3f}\")\n",
+    "\n",
+    "print(\"-\"*25 + \" All Z-scores \" + \"-\"*25)\n",
+    "mb.print_z_scores()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2020-08-28T17:30:02.819498Z",
-     "iopub.status.busy": "2020-08-28T17:30:02.819320Z",
-     "iopub.status.idle": "2020-08-28T17:30:02.823943Z",
-     "shell.execute_reply": "2020-08-28T17:30:02.823435Z",
-     "shell.execute_reply.started": "2020-08-28T17:30:02.819479Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Feasible\n"
-     ]
-    }
-   ],
-   "source": [
-    "# check that the driving forces at the mode are all positive\n",
-    "if (_driving_forces(ln_Keq, ln_conc_met, S).value >= 1e-6).all():\n",
-    "    print(\"Feasible\")\n",
-    "else:\n",
-    "    raise Exception(\"Infeasible\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2020-08-28T17:30:02.825195Z",
-     "iopub.status.busy": "2020-08-28T17:30:02.824999Z",
-     "iopub.status.idle": "2020-08-28T17:30:04.427372Z",
-     "shell.execute_reply": "2020-08-28T17:30:04.426846Z",
-     "shell.execute_reply.started": "2020-08-28T17:30:02.825176Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "************ rate law = CM **************\n",
-      "\n",
-      "initial Z-score = 0.00e+00\n",
-      "optimal Z-score = 4.69e-09\n",
       "\n",
       "Metabolite concentrations (M) =\n",
-      " [[2.00000018e-03 1.00000007e-02 2.00000018e-03 1.00000009e-03]\n",
-      " [2.00000018e-04 1.00000015e-04 3.00000019e-04 1.00000014e-04]\n",
-      " [9.99999951e-06 9.99999908e-06 9.99999966e-06 9.99999908e-06]]\n",
+      " [[3.00000000e-03 4.00213146e-03 9.02560533e-04 3.01428562e-04]\n",
+      " [2.00654461e-03 3.00462420e-03 6.00000000e-04 1.99228363e-04]\n",
+      " [9.97869880e-04 1.99381977e-03 3.00000000e-04 1.00000000e-04]]\n",
       "\n",
       "Enzyme concentrations (M) =\n",
-      " [[0.00160275 0.00022503 0.00263183 0.00262951]\n",
-      " [0.00030468 0.00108325 0.00044827 0.00054162]\n",
-      " [0.00060004 0.00055004 0.00021668 0.00220018]]\n",
+      " [[0.01612117 0.02177984 0.01517331 0.01693491]\n",
+      " [0.00026595 0.00032576 0.00093723 0.00061825]\n",
+      " [0.00035917 0.00017371 0.0007039  0.01618507]]\n",
       "\n",
       "Driving forces (RT) =\n",
-      " [[ 6.34565871  8.64824373  5.94019363  6.34565866]\n",
-      " [ 0.95554139  0.26239431  1.36100645  0.2623943 ]\n",
-      " [11.06665445 10.37350737 11.47211952 10.37350737]]\n",
+      " [[0.74651355 0.63098999 0.75262151 0.75839674]\n",
+      " [0.85707379 0.56862748 0.85167444 0.84780879]\n",
+      " [0.98970921 0.70126289 0.98430985 0.9804442 ]]\n",
       "\n",
       "η(thr) =\n",
-      " [[1.   1.   1.   1.  ]\n",
-      " [0.62 0.23 0.74 0.23]\n",
-      " [1.   1.   1.   1.  ]]\n",
+      " [[0.53 0.47 0.53 0.53]\n",
+      " [0.58 0.43 0.57 0.57]\n",
+      " [0.63 0.5  0.63 0.62]]\n",
       "\n",
       "η(kin) =\n",
-      " [[0.06 0.33 0.05 0.05]\n",
-      " [0.67 0.5  0.75 0.5 ]\n",
-      " [0.17 0.09 0.23 0.09]]\n",
+      " [[0.02 0.02 0.02 0.01]\n",
+      " [0.95 0.97 0.86 0.67]\n",
+      " [0.68 0.76 0.39 0.18]]\n",
       "\n",
       "η(reg) =\n",
-      " [[1. 1. 1. 1.]\n",
-      " [1. 1. 1. 1.]\n",
-      " [1. 1. 1. 1.]]\n",
+      " [[0.54 0.37 0.8  0.92]\n",
+      " [0.75 0.8  0.47 0.23]\n",
+      " [0.47 0.54 0.21 0.08]]\n",
       "\n",
       "\n",
       "\n",
-      "\n",
-      "All Z-scores\n",
-      "--------------------------------------------------\n",
-      "enzymes =  0.0\n",
-      "metabolites =  0.0\n",
-      "Keq =  0.0\n",
-      "kcat forward =  0.0\n",
-      "kcat reverse =  0.0\n",
-      "Km =  0.0\n",
-      "Ka =  0.0\n",
-      "Ki =  0.0\n"
+      "\n"
      ]
     }
    ],
    "source": [
-    "for rate_law in [\"CM\"]:#[\"S\", \"1S\", \"SP\", \"1SP\", \"CM\"]:\n",
-    "    print(f\"************ rate law = {rate_law} **************\\n\")\n",
-    "    args[\"conc_enz_gmean\"] = np.exp(\n",
-    "        _ln_conc_enz(\n",
-    "            ln_Keq, ln_kcatf, ln_Km, ln_Ka, ln_Ki, ln_conc_met,\n",
-    "            fluxes, S, A_act, A_inh , rate_law=rate_law).value\n",
-    "    ) * Q_(\"M\")\n",
-    "    args[\"rate_law\"] = rate_law\n",
-    "\n",
-    "    solve(\n",
-    "        **args,\n",
-    "    )"
+    "mb.print_status()"
    ]
   }
  ],
