cosmetic changes to python code

--- a/python/example_json.ipynb
+++ b/python/example_json.ipynb
@@ -121,16 +121,16 @@
      "text": [
       "optimized total squared Z-scores = 154.765\n",
       "------------------------- All Z-scores -------------------------\n",
-      "enzymes =  0.37\n",
-      "metabolites =  2.9\n",
-      "Keq =  6.4\n",
-      "kcat forward =  40.58\n",
-      "kcat reverse =  32.37\n",
-      "Km =  72.15\n",
-      "Ka =  0.0\n",
-      "Ki =  0.0\n",
-      "CPU times: user 24.4 s, sys: 3.45 s, total: 27.8 s\n",
-      "Wall time: 26.7 s\n"
+      "enz = 0.37\n",
+      "met = 2.9\n",
+      "Keq = 6.4\n",
+      "kcatf = 40.58\n",
+      "kcatr = 32.37\n",
+      "Km = 72.15\n",
+      "Ka = 0.0\n",
+      "Ki = 0.0\n",
+      "CPU times: user 18.6 s, sys: 2.74 s, total: 21.4 s\n",
+      "Wall time: 20.2 s\n"
      ]
     }
    ],
@@ -157,16 +157,16 @@
       "initial total squared Z-scores = 0.000\n",
       "optimized total squared Z-scores = 0.000\n",
       "------------------------- All Z-scores -------------------------\n",
-      "enzymes =  0.0\n",
-      "metabolites =  0.0\n",
-      "Keq =  0.0\n",
-      "kcat forward =  0.0\n",
-      "kcat reverse =  0.0\n",
-      "Km =  0.0\n",
-      "Ka =  0.0\n",
-      "Ki =  0.0\n",
-      "CPU times: user 18.3 s, sys: 1.78 s, total: 20.1 s\n",
-      "Wall time: 19.4 s\n"
+      "enz = 0.0\n",
+      "met = 0.0\n",
+      "Keq = 0.0\n",
+      "kcatf = 0.0\n",
+      "kcatr = 0.0\n",
+      "Km = 0.0\n",
+      "Ka = 0.0\n",
+      "Ki = 0.0\n",
+      "CPU times: user 18.8 s, sys: 2.13 s, total: 20.9 s\n",
+      "Wall time: 20.3 s\n"
      ]
     }
    ],
@@ -186,6 +186,13 @@
     "print(\"-\"*25 + \" All Z-scores \" + \"-\"*25)\n",
     "mb.print_z_scores()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
