--- a/python/toy_example.ipynb
+++ b/python/toy_example.ipynb
@@ -55,7 +55,7 @@
     "if use_regulation:\n",
     "    args[\"A_act\"] = np.matrix(\n",
     "        [\n",
-    "            [0, 1, 1],\n",
+    "            [0, 0, 1],\n",
     "            [0, 0, 0],\n",
     "            [0, 0, 0]\n",
     "        ], dtype=float\n",
@@ -64,7 +64,7 @@
     "        [\n",
     "            [0, 0, 0],\n",
     "            [0, 0, 0],\n",
-    "            [1, 0, 0]\n",
+    "            [0, 0, 0]\n",
     "        ], dtype=float\n",
     "    )\n",
     "else:\n",
@@ -207,16 +207,16 @@
      "output_type": "stream",
      "text": [
       "initial total squared Z-scores = 0.000\n",
-      "optimized total squared Z-scores = 0.629\n",
+      "optimized total squared Z-scores = 0.124\n",
       "------------------------- All Z-scores -------------------------\n",
-      "enzymes =  0.0\n",
-      "metabolites =  0.01\n",
-      "Keq =  0.23\n",
-      "kcat forward =  0.16\n",
-      "kcat reverse =  0.01\n",
-      "Km =  0.05\n",
-      "Ka =  0.14\n",
-      "Ki =  0.03\n"
+      "enz = 0.0\n",
+      "met = 0.00153\n",
+      "Keq = 0.05093\n",
+      "kcatf = 0.04698\n",
+      "kcatr = 0.00107\n",
+      "Km = 0.00513\n",
+      "Ka = 0.01847\n",
+      "Ki = 0.0\n"
      ]
     }
    ],
@@ -235,7 +235,7 @@
     "print(f\"optimized total squared Z-scores = {mb.objective_value:.3f}\")\n",
     "\n",
     "print(\"-\"*25 + \" All Z-scores \" + \"-\"*25)\n",
-    "mb.print_z_scores()"
+    "mb.print_z_scores(5)"
    ]
   },
   {
@@ -249,34 +249,34 @@
      "text": [
       "\n",
       "Metabolite concentrations (M) =\n",
-      " [[3.00000000e-03 4.00213146e-03 9.02560533e-04 3.01428562e-04]\n",
-      " [2.00654461e-03 3.00462420e-03 6.00000000e-04 1.99228363e-04]\n",
-      " [9.97869880e-04 1.99381977e-03 3.00000000e-04 1.00000000e-04]]\n",
+      " [[3.00029259e-03 4.00033276e-03 9.01942727e-04 3.00000000e-04]\n",
+      " [2.00437887e-03 3.00228805e-03 5.99376425e-04 2.00000000e-04]\n",
+      " [9.98502947e-04 1.99850548e-03 3.00000000e-04 9.99999999e-05]]\n",
       "\n",
       "Enzyme concentrations (M) =\n",
-      " [[0.01612117 0.02177984 0.01517331 0.01693491]\n",
-      " [0.00026595 0.00032576 0.00093723 0.00061825]\n",
-      " [0.00035917 0.00017371 0.0007039  0.01618507]]\n",
+      " [[0.01668403 0.01716065 0.02289366 0.02974065]\n",
+      " [0.00023024 0.00031844 0.00051347 0.00016462]\n",
+      " [0.00026385 0.00014533 0.00035381 0.0062495 ]]\n",
       "\n",
       "Driving forces (RT) =\n",
-      " [[0.74651355 0.63098999 0.75262151 0.75839674]\n",
-      " [0.85707379 0.56862748 0.85167444 0.84780879]\n",
-      " [0.98970921 0.70126289 0.98430985 0.9804442 ]]\n",
+      " [[0.48980934 0.37343661 0.49509495 0.49189886]\n",
+      " [0.77320412 0.48334676 0.76847907 0.7695189 ]\n",
+      " [0.8908045  0.60094714 0.88607945 0.88711928]]\n",
       "\n",
       "η(thr) =\n",
-      " [[0.53 0.47 0.53 0.53]\n",
-      " [0.58 0.43 0.57 0.57]\n",
-      " [0.63 0.5  0.63 0.62]]\n",
+      " [[0.39 0.31 0.39 0.39]\n",
+      " [0.54 0.38 0.54 0.54]\n",
+      " [0.59 0.45 0.59 0.59]]\n",
       "\n",
       "η(kin) =\n",
-      " [[0.02 0.02 0.02 0.01]\n",
+      " [[0.01 0.01 0.01 0.01]\n",
       " [0.95 0.97 0.86 0.67]\n",
-      " [0.68 0.76 0.39 0.18]]\n",
+      " [0.68 0.76 0.39 0.17]]\n",
       "\n",
       "η(reg) =\n",
-      " [[0.54 0.37 0.8  0.92]\n",
-      " [0.75 0.8  0.47 0.23]\n",
-      " [0.47 0.54 0.21 0.08]]\n",
+      " [[1.   1.   1.   1.  ]\n",
+      " [1.   1.   1.   1.  ]\n",
+      " [0.77 0.82 0.51 0.26]]\n",
       "\n",
       "\n",
       "\n",
