chore: isort, black and gitignore

--- a/python/toy_example.ipynb
+++ b/python/toy_example.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
       "Metabolite concentrations (M) =\n",
       " [[3.00029259e-03 4.00033276e-03 9.01942727e-04 3.00000000e-04]\n",
       " [2.00437887e-03 3.00228805e-03 5.99376425e-04 2.00000000e-04]\n",
-      " [9.98502947e-04 1.99850548e-03 3.00000000e-04 9.99999999e-05]]\n",
+      " [9.98502947e-04 1.99850548e-03 3.00000000e-04 1.00000000e-04]]\n",
       "\n",
       "Enzyme concentrations (M) =\n",
       " [[0.01668403 0.01716065 0.02289366 0.02974065]\n",
@@ -259,9 +259,9 @@
       " [0.00026385 0.00014533 0.00035381 0.0062495 ]]\n",
       "\n",
       "Driving forces (RT) =\n",
-      " [[0.48980934 0.37343661 0.49509495 0.49189886]\n",
-      " [0.77320412 0.48334676 0.76847907 0.7695189 ]\n",
-      " [0.8908045  0.60094714 0.88607945 0.88711928]]\n",
+      " [[0.48980933 0.37343661 0.49509494 0.49189885]\n",
+      " [0.77320411 0.48334675 0.76847906 0.76951889]\n",
+      " [0.89080451 0.60094715 0.88607946 0.88711929]]\n",
       "\n",
       "η(thr) =\n",
       " [[0.39 0.31 0.39 0.39]\n",
@@ -291,9 +291,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "name": "pycharm-7676d487",
    "language": "python",
-   "name": "python3"
+   "display_name": "PyCharm (convex-model-balancing)"
   },
   "language_info": {
    "codemirror_mode": {
