starting to implement the non-convex version of model balancing in Python

--- a/python/example_json.ipynb
+++ b/python/example_json.ipynb
@@ -2,24 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "import numpy as np\n",
-    "from model_balancing import ModelBalancing, Q_\n",
+    "from model_balancing_cvx import ModelBalancingConvex, Q_\n",
     "import cvxpy as cp\n",
     "np.set_printoptions(precision=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"../cvxpy/examples/simple-example/no_noise_with_noisefree_kinetic_data/small_model_network_and_data.json\", \"rt\") as fp:\n",
+    "with open(\"../cvxpy/examples/double-branch-model/no_noise_with_noisefree_kinetic_data/double_branch_model_no_noise_with_noisefree_kinetic_data.json\", \"rt\") as fp:\n",
     "    data = json.load(fp)\n",
     "\n",
     "args = {}\n",
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -66,13 +66,13 @@
      "output_type": "stream",
      "text": [
       "kcat reverse comparison:\n",
-      "from JSON:   [ 814.9 1149.9  199.8   41.8 1722.8]\n",
-      "calculated:  [3.4e+03 3.5e-02 2.7e+02 6.8e+01 2.4e+02]\n"
+      "from JSON:   [1408.7    8.8  362.3   53.   528.1]\n",
+      "calculated:  [1408.1    8.8  362.5   53.   528.2]\n"
      ]
     }
    ],
    "source": [
-    "mb = ModelBalancing(**args)\n",
+    "mb = ModelBalancingConvex(**args)\n",
     "mb.initialize_with_gmeans()\n",
     "print(\"kcat reverse comparison:\")\n",
     "print(\"from JSON:  \", args[\"kcatr_gmean\"].m_as(\"1/s\"))\n",
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -90,17 +90,17 @@
      "text": [
       "enzyme concentration comparison:\n",
       "from JSON:  \n",
-      " [[4.6e-07 1.1e-06 1.1e-06 6.9e-07]\n",
-      " [3.0e-06 1.4e-06 1.2e-06 7.6e-07]\n",
-      " [1.2e-06 7.0e-07 5.0e-07 6.8e-07]\n",
-      " [5.8e-07 5.9e-07 2.4e-07 6.1e-07]\n",
-      " [9.2e-07 7.2e-07 4.1e-07 4.0e-07]]\n",
+      " [[6.4e-07 9.3e-07 9.4e-07 1.1e-06]\n",
+      " [2.1e-06 1.2e-06 1.0e-06 8.4e-07]\n",
+      " [1.0e-06 9.0e-07 6.1e-07 5.6e-07]\n",
+      " [5.0e-07 4.9e-07 3.8e-07 6.0e-07]\n",
+      " [1.4e-06 6.4e-07 5.1e-07 3.7e-07]]\n",
       "calculated: \n",
-      " [[3.9e-07 4.4e-07 6.2e-07 3.7e-07]\n",
-      " [4.8e-04 3.3e-04 3.3e-04 3.1e-04]\n",
-      " [1.1e-06 9.1e-07 5.9e-07 6.1e-07]\n",
-      " [4.3e-07 7.6e-07 3.2e-07 5.8e-07]\n",
-      " [3.8e-07 5.5e-07 4.7e-07 3.9e-07]]\n"
+      " [[6.8e-07 1.0e-06 9.9e-07 1.1e-06]\n",
+      " [2.2e-06 1.3e-06 1.1e-06 8.9e-07]\n",
+      " [1.1e-06 9.3e-07 6.3e-07 5.8e-07]\n",
+      " [5.2e-07 5.1e-07 4.0e-07 6.3e-07]\n",
+      " [1.5e-06 6.7e-07 5.4e-07 3.9e-07]]\n"
      ]
     }
    ],
@@ -112,32 +112,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "optimized total squared Z-scores = 154.765\n",
+      "optimized total squared Z-scores = 0.054\n",
       "------------------------- All Z-scores -------------------------\n",
-      "enz = 0.37\n",
-      "met = 2.9\n",
-      "Keq = 6.4\n",
-      "kcatf = 40.58\n",
-      "kcatr = 32.37\n",
-      "Km = 72.15\n",
+      "enz = 0.0\n",
+      "met = 0.0\n",
+      "Keq = 0.01\n",
+      "kcatf = 0.03\n",
+      "kcatr = 0.0\n",
+      "Km = 0.01\n",
       "Ka = 0.0\n",
       "Ki = 0.0\n",
-      "CPU times: user 16.2 s, sys: 1.82 s, total: 18.1 s\n",
-      "Wall time: 16.3 s\n"
+      "CPU times: user 8.53 s, sys: 3.43 s, total: 12 s\n",
+      "Wall time: 11 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "\n",
-    "mb = ModelBalancing(**args)\n",
+    "mb = ModelBalancingConvex(**args)\n",
     "mb.solve()\n",
     "print(f\"optimized total squared Z-scores = {mb.objective_value:.3f}\")\n",
     "print(\"-\"*25 + \" All Z-scores \" + \"-\"*25)\n",
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -165,15 +165,15 @@
       "Km = 0.0\n",
       "Ka = 0.0\n",
       "Ki = 0.0\n",
-      "CPU times: user 15.1 s, sys: 1.64 s, total: 16.7 s\n",
-      "Wall time: 15.1 s\n"
+      "CPU times: user 9.13 s, sys: 2.41 s, total: 11.5 s\n",
+      "Wall time: 10.3 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "\n",
-    "mb = ModelBalancing(**args)\n",
+    "mb = ModelBalancingConvex(**args)\n",
     "\n",
     "print(\"Setting enzyme conc. and kcatr gmeans to calculated values...\")\n",
     "# check that the driving forces at the mode are all positive\n",
@@ -186,13 +186,6 @@
     "print(\"-\"*25 + \" All Z-scores \" + \"-\"*25)\n",
     "mb.print_z_scores()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -211,7 +204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
