--- a/python/toy_example.ipynb
+++ b/python/toy_example.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -249,19 +249,19 @@
      "text": [
       "\n",
       "Metabolite concentrations (M) =\n",
-      " [[3.00029259e-03 4.00033276e-03 9.01942727e-04 3.00000000e-04]\n",
-      " [2.00437887e-03 3.00228805e-03 5.99376425e-04 2.00000000e-04]\n",
-      " [9.98502947e-04 1.99850548e-03 3.00000000e-04 1.00000000e-04]]\n",
+      " [[0.00300029 0.00400033 0.00090194 0.0003    ]\n",
+      " [0.00200438 0.00300229 0.00059938 0.0002    ]\n",
+      " [0.0009985  0.00199851 0.0003     0.0001    ]]\n",
       "\n",
       "Enzyme concentrations (M) =\n",
-      " [[0.01668403 0.01716065 0.02289366 0.02974065]\n",
+      " [[0.01668403 0.01716065 0.02289365 0.02974065]\n",
       " [0.00023024 0.00031844 0.00051347 0.00016462]\n",
       " [0.00026385 0.00014533 0.00035381 0.0062495 ]]\n",
       "\n",
       "Driving forces (RT) =\n",
-      " [[0.48980933 0.37343661 0.49509494 0.49189885]\n",
-      " [0.77320411 0.48334675 0.76847906 0.76951889]\n",
-      " [0.89080451 0.60094715 0.88607946 0.88711929]]\n",
+      " [[0.48980926 0.37343654 0.49509486 0.49189878]\n",
+      " [0.77320391 0.48334653 0.76847886 0.76951869]\n",
+      " [0.89080485 0.60094747 0.88607979 0.88711962]]\n",
       "\n",
       "η(thr) =\n",
       " [[0.39 0.31 0.39 0.39]\n",
@@ -291,9 +291,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "pycharm-7676d487",
+   "display_name": "Python 3",
    "language": "python",
-   "display_name": "PyCharm (convex-model-balancing)"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -305,7 +305,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
