first working version of non-convex optimization in python

--- a/python/toy_example_cvx.ipynb
+++ b/python/toy_example_cvx.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "organized-comedy",
    "metadata": {},
    "source": [
     "## Solve Model balancing problem with kinetic parameters as variables"
@@ -11,19 +10,18 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "lovely-supplier",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from model_balancing import ModelBalancing\n",
-    "from util import Q_"
+    "from model_balancing_cvx import ModelBalancingConvex\n",
+    "from util import Q_\n",
+    "import cvxpy as cp"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "chemical-radius",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,13 +30,16 @@
     "\n",
     "# choose solver\n",
     "\n",
-    "args[\"solver\"] = \"SLSQP\""
+    "if cp.MOSEK in cp.installed_solvers():\n",
+    "    args[\"solver\"] = cp.MOSEK\n",
+    "else:\n",
+    "    #args[\"solver\"] = cp.SCS\n",
+    "    args[\"solver\"] = cp.ECOS"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "typical-inspiration",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +88,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "whole-printer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "quantitative-stuff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,8 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "democratic-thickness",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -210,46 +208,46 @@
      "output_type": "stream",
      "text": [
       "initial total squared Z-scores = 0.000\n",
-      "optimized total squared Z-scores = 0.000\n",
+      "optimized total squared Z-scores = 0.124\n",
       "------------------------- All Z-scores -------------------------\n",
-      "Km = 0.0\n",
-      "Ka = 0.0\n",
+      "enz = 0.0\n",
+      "met = 0.00153\n",
+      "Keq = 0.05093\n",
+      "kcatf = 0.04698\n",
+      "kcatr = 0.00107\n",
+      "Km = 0.00513\n",
+      "Ka = 0.01847\n",
       "Ki = 0.0\n",
-      "Keq = 0.0\n",
-      "kcatf = 0.0\n",
-      "conc_met = 0.0\n",
-      "kcatr = 0.0\n",
-      "conc_enz = 0.0\n",
       "\n",
       "Metabolite concentrations (M) =\n",
-      " [[3.e-03 4.e-03 9.e-04 3.e-04]\n",
-      " [2.e-03 3.e-03 6.e-04 2.e-04]\n",
-      " [1.e-03 2.e-03 3.e-04 1.e-04]]\n",
+      " [[0.00300029 0.00400033 0.00090194 0.0003    ]\n",
+      " [0.00200438 0.00300229 0.00059938 0.0002    ]\n",
+      " [0.0009985  0.00199851 0.0003     0.0001    ]]\n",
       "\n",
       "Enzyme concentrations (M) =\n",
-      " [[0.0213     0.02355    0.02954167 0.037875  ]\n",
-      " [0.00026263 0.00038775 0.00058358 0.00018756]\n",
-      " [0.00040133 0.00025125 0.00056402 0.01040867]]\n",
+      " [[0.01668403 0.01716065 0.02289365 0.02974065]\n",
+      " [0.00023024 0.00031844 0.00051347 0.00016462]\n",
+      " [0.00026385 0.00014533 0.00035381 0.0062495 ]]\n",
       "\n",
       "Driving forces (RT) =\n",
-      " [[0.40546511 0.28768207 0.40546511 0.40546511]\n",
-      " [0.69314718 0.40546511 0.69314718 0.69314718]\n",
-      " [0.69314718 0.40546511 0.69314718 0.69314718]]\n",
+      " [[0.48980926 0.37343654 0.49509486 0.49189878]\n",
+      " [0.77320391 0.48334653 0.76847886 0.76951869]\n",
+      " [0.89080485 0.60094747 0.88607979 0.88711962]]\n",
       "\n",
       "η(thr) =\n",
-      " [[0.33 0.25 0.33 0.33]\n",
-      " [0.5  0.33 0.5  0.5 ]\n",
-      " [0.5  0.33 0.5  0.5 ]]\n",
+      " [[0.39 0.31 0.39 0.39]\n",
+      " [0.54 0.38 0.54 0.54]\n",
+      " [0.59 0.45 0.59 0.59]]\n",
       "\n",
       "η(kin) =\n",
       " [[0.01 0.01 0.01 0.01]\n",
       " [0.95 0.97 0.86 0.67]\n",
-      " [0.66 0.75 0.37 0.17]]\n",
+      " [0.68 0.76 0.39 0.17]]\n",
       "\n",
       "η(reg) =\n",
       " [[1.   1.   1.   1.  ]\n",
       " [1.   1.   1.   1.  ]\n",
-      " [0.75 0.8  0.47 0.23]]\n",
+      " [0.77 0.82 0.51 0.26]]\n",
       "\n",
       "\n",
       "\n",
@@ -260,7 +258,7 @@
    "source": [
     "args[\"rate_law\"] = \"CM\"\n",
     "\n",
-    "mb = ModelBalancing(**args)\n",
+    "mb = ModelBalancingConvex(**args)\n",
     "\n",
     "# check that the driving forces at the mode are all positive\n",
     "assert mb.is_gmean_feasible()\n",
@@ -298,5 +296,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 4
 }
